{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 1878,
  "lineage": "287d1407-95d9-dbc6-0bdd-6f0e61209e00",
  "resources": [
    {
      "module": "module.aws_database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DBSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386832079757:security-group/sg-03f6f261555920da2",
            "description": "RDS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f6f261555920da2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow database access to the whole VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Wordpress-Demo-RDS-SG",
            "name_prefix": "",
            "owner_id": "386832079757",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0671cd56ea1380d5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ElasticIP0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0af2ca77a2d1396ba",
            "association_id": "eipassoc-0ee6a1654b1b9e3f1",
            "domain": "vpc",
            "id": "eipalloc-0af2ca77a2d1396ba",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01365f6bcaa6479ab",
            "private_dns": "ip-10-0-0-178.ec2.internal",
            "private_ip": "10.0.0.178",
            "public_dns": "ec2-3-215-195-233.compute-1.amazonaws.com",
            "public_ip": "3.215.195.233",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ElasticIP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0008b94fbb3f636ae",
            "association_id": "eipassoc-0e86c4110b15870f7",
            "domain": "vpc",
            "id": "eipalloc-0008b94fbb3f636ae",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d26e5af8c19698f2",
            "private_dns": "ip-10-0-1-238.ec2.internal",
            "private_ip": "10.0.1.238",
            "public_dns": "ec2-52-44-125-16.compute-1.amazonaws.com",
            "public_ip": "52.44.125.16",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "InternetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386832079757:internet-gateway/igw-02c69854a1f2fe2e6",
            "id": "igw-02c69854a1f2fe2e6",
            "owner_id": "386832079757",
            "tags": {
              "Application": "Stack Name",
              "Name": "VPCNameParameter-public-+ aws_vpc.wordpress_vpc.name-IGW",
              "Network": "Public"
            },
            "tags_all": {
              "Application": "Stack Name",
              "Name": "VPCNameParameter-public-+ aws_vpc.wordpress_vpc.name-IGW",
              "Network": "Public"
            },
            "vpc_id": "vpc-0671cd56ea1380d5e"
          },
          "dependencies": [
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGateway0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0af2ca77a2d1396ba",
            "connectivity_type": "public",
            "id": "nat-0301ff2499fee1d11",
            "network_interface_id": "eni-01365f6bcaa6479ab",
            "private_ip": "10.0.0.178",
            "public_ip": "3.215.195.233",
            "subnet_id": "subnet-070f5908db770b14f",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.aws_network.aws_eip.ElasticIP0",
            "module.aws_network.aws_internet_gateway.InternetGateway",
            "module.aws_network.aws_subnet.PublicSubnet0",
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0008b94fbb3f636ae",
            "connectivity_type": "public",
            "id": "nat-091738d6c88b03db0",
            "network_interface_id": "eni-0d26e5af8c19698f2",
            "private_ip": "10.0.1.238",
            "public_ip": "52.44.125.16",
            "subnet_id": "subnet-0fcff5cff85f6bac1",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.aws_network.aws_eip.ElasticIP1",
            "module.aws_network.aws_internet_gateway.InternetGateway",
            "module.aws_network.aws_subnet.PublicSubnet1",
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "PublicNetworkAcl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386832079757:network-acl/acl-0363defc466aea3c2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0363defc466aea3c2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "386832079757",
            "subnet_ids": [
              "subnet-070f5908db770b14f",
              "subnet-0fcff5cff85f6bac1"
            ],
            "tags": {
              "Name": "WordpressBlogVPC-public-nacl"
            },
            "tags_all": {
              "Name": "WordpressBlogVPC-public-nacl"
            },
            "vpc_id": "vpc-0671cd56ea1380d5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "PublicSubnetNetworkAclAssociation0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-044a49301ebf9e1d6",
            "network_acl_id": "acl-0363defc466aea3c2",
            "subnet_id": "subnet-070f5908db770b14f"
          },
          "dependencies": [
            "module.aws_network.aws_network_acl.PublicNetworkAcl",
            "module.aws_network.aws_subnet.PublicSubnet0",
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "PublicSubnetNetworkAclAssociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-063266dfef37663a1",
            "network_acl_id": "acl-0363defc466aea3c2",
            "subnet_id": "subnet-0fcff5cff85f6bac1"
          },
          "dependencies": [
            "module.aws_network.aws_network_acl.PublicNetworkAcl",
            "module.aws_network.aws_subnet.PublicSubnet1",
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "PublicNetworkAcl_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2709124463",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0363defc466aea3c2",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_network.aws_network_acl.PublicNetworkAcl",
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "PublicNetworkAcl_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2255668897",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0363defc466aea3c2",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_network.aws_network_acl.PublicNetworkAcl",
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteTable0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386832079757:route-table/rtb-0185e3953c7c5c7c5",
            "id": "rtb-0185e3953c7c5c7c5",
            "owner_id": "386832079757",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0301ff2499fee1d11",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "Stack Name...",
              "Name": "VPC Name-private-route-table-0",
              "Network": "Private"
            },
            "tags_all": {
              "Application": "Stack Name...",
              "Name": "VPC Name-private-route-table-0",
              "Network": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0671cd56ea1380d5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_network.aws_eip.ElasticIP0",
            "module.aws_network.aws_internet_gateway.InternetGateway",
            "module.aws_network.aws_nat_gateway.NATGateway0",
            "module.aws_network.aws_subnet.PublicSubnet0",
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteTable1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386832079757:route-table/rtb-06d2d7960846b7435",
            "id": "rtb-06d2d7960846b7435",
            "owner_id": "386832079757",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-091738d6c88b03db0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "Stack Name...",
              "Name": "VPC Name-private-route-table-1",
              "Network": "Private"
            },
            "tags_all": {
              "Application": "Stack Name...",
              "Name": "VPC Name-private-route-table-1",
              "Network": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0671cd56ea1380d5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_network.aws_eip.ElasticIP1",
            "module.aws_network.aws_internet_gateway.InternetGateway",
            "module.aws_network.aws_nat_gateway.NATGateway1",
            "module.aws_network.aws_subnet.PublicSubnet1",
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386832079757:route-table/rtb-0fe8ff10ddf3f792a",
            "id": "rtb-0fe8ff10ddf3f792a",
            "owner_id": "386832079757",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c69854a1f2fe2e6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "Stack Name...",
              "Name": "VPC Name-public-route-table",
              "Network": "Public"
            },
            "tags_all": {
              "Application": "Stack Name...",
              "Name": "VPC Name-public-route-table",
              "Network": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0671cd56ea1380d5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_network.aws_internet_gateway.InternetGateway",
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnetRouteTableAssociation0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08af667d7dd3bd7e5",
            "route_table_id": "rtb-0185e3953c7c5c7c5",
            "subnet_id": "subnet-0050af8c1a4b0a5db"
          },
          "dependencies": [
            "module.aws_network.aws_eip.ElasticIP0",
            "module.aws_network.aws_internet_gateway.InternetGateway",
            "module.aws_network.aws_nat_gateway.NATGateway0",
            "module.aws_network.aws_route_table.PrivateRouteTable0",
            "module.aws_network.aws_subnet.PrivateSubnet0",
            "module.aws_network.aws_subnet.PublicSubnet0",
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnetRouteTableAssociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06842d7e90658d9ed",
            "route_table_id": "rtb-06d2d7960846b7435",
            "subnet_id": "subnet-0ac22b62f626e13fb"
          },
          "dependencies": [
            "module.aws_network.aws_eip.ElasticIP1",
            "module.aws_network.aws_internet_gateway.InternetGateway",
            "module.aws_network.aws_nat_gateway.NATGateway1",
            "module.aws_network.aws_route_table.PrivateRouteTable1",
            "module.aws_network.aws_subnet.PrivateSubnet1",
            "module.aws_network.aws_subnet.PublicSubnet1",
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnetRouteTableAssociation0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8265fcaa5a08191",
            "route_table_id": "rtb-0fe8ff10ddf3f792a",
            "subnet_id": "subnet-070f5908db770b14f"
          },
          "dependencies": [
            "module.aws_network.aws_internet_gateway.InternetGateway",
            "module.aws_network.aws_route_table.PublicRouteTable",
            "module.aws_network.aws_subnet.PublicSubnet0",
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnetRouteTableAssociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e66075f5638d92ee",
            "route_table_id": "rtb-0fe8ff10ddf3f792a",
            "subnet_id": "subnet-0fcff5cff85f6bac1"
          },
          "dependencies": [
            "module.aws_network.aws_internet_gateway.InternetGateway",
            "module.aws_network.aws_route_table.PublicRouteTable",
            "module.aws_network.aws_subnet.PublicSubnet1",
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MountTargetSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386832079757:security-group/sg-006161f2196cfd56b",
            "description": "FileSystem Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006161f2196cfd56b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "File System",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "Wordpress-Demo-EFS-SG",
            "name_prefix": "",
            "owner_id": "386832079757",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0671cd56ea1380d5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386832079757:subnet/subnet-0050af8c1a4b0a5db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0050af8c1a4b0a5db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "386832079757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Stack Name",
              "Name": "VPCNameParameter-private-+ aws_wordpress_private_subnet.PrivateSubnet0.availability_zone",
              "Network": "Private"
            },
            "tags_all": {
              "Application": "Stack Name",
              "Name": "VPCNameParameter-private-+ aws_wordpress_private_subnet.PrivateSubnet0.availability_zone",
              "Network": "Private"
            },
            "vpc_id": "vpc-0671cd56ea1380d5e"
          },
          "dependencies": [
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386832079757:subnet/subnet-0ac22b62f626e13fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac22b62f626e13fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "386832079757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Stack Name",
              "Name": "VPCNameParameter-private-+ aws_wordpress_private_subnet.PrivateSubnet1.availability_zone",
              "Network": "Private"
            },
            "tags_all": {
              "Application": "Stack Name",
              "Name": "VPCNameParameter-private-+ aws_wordpress_private_subnet.PrivateSubnet1.availability_zone",
              "Network": "Private"
            },
            "vpc_id": "vpc-0671cd56ea1380d5e"
          },
          "dependencies": [
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386832079757:subnet/subnet-070f5908db770b14f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070f5908db770b14f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "386832079757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Stack Name",
              "Name": "VPCNameParameter-public-+ aws_wordpress_public_subnet.PublicSubnet0.availability_zone",
              "Network": "Public"
            },
            "tags_all": {
              "Application": "Stack Name",
              "Name": "VPCNameParameter-public-+ aws_wordpress_public_subnet.PublicSubnet0.availability_zone",
              "Network": "Public"
            },
            "vpc_id": "vpc-0671cd56ea1380d5e"
          },
          "dependencies": [
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386832079757:subnet/subnet-0fcff5cff85f6bac1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcff5cff85f6bac1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "386832079757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Stack Name",
              "Name": "VPCNameParameter-public-+ aws_wordpress_public_subnet.PublicSubnet1.availability_zone",
              "Network": "Public"
            },
            "tags_all": {
              "Application": "Stack Name",
              "Name": "VPCNameParameter-public-+ aws_wordpress_public_subnet.PublicSubnet1.availability_zone",
              "Network": "Public"
            },
            "vpc_id": "vpc-0671cd56ea1380d5e"
          },
          "dependencies": [
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wordpress_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386832079757:vpc/vpc-0671cd56ea1380d5e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-071750d6d4983b708",
            "default_route_table_id": "rtb-014e7a379d72c7a7e",
            "default_security_group_id": "sg-064acae0f2281f2f8",
            "dhcp_options_id": "dopt-83d1cae1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0671cd56ea1380d5e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-014e7a379d72c7a7e",
            "owner_id": "386832079757",
            "tags": {
              "Name": "WordpressBlogVPC",
              "Network": "Public"
            },
            "tags_all": {
              "Name": "WordpressBlogVPC",
              "Network": "Public"
            }
          }
        }
      ]
    },
    {
      "module": "module.aws_worpress_app",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "WordPressALBListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:386832079757:listener/app/wof-load-balancer/623e1dd7b0db2ca4/5e881105f180760e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:386832079757:targetgroup/WordPressTargetGroup/8eb6b483cbbfbefc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:386832079757:listener/app/wof-load-balancer/623e1dd7b0db2ca4/5e881105f180760e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:386832079757:loadbalancer/app/wof-load-balancer/623e1dd7b0db2ca4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_worpress_app.aws_alb_target_group.WordpressTargetgroup",
            "module.aws_worpress_app.aws_lb.WordPressALB"
          ]
        }
      ]
    },
    {
      "module": "module.aws_worpress_app",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "WordpressTargetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:386832079757:targetgroup/WordPressTargetGroup/8eb6b483cbbfbefc",
            "arn_suffix": "targetgroup/WordPressTargetGroup/8eb6b483cbbfbefc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:386832079757:targetgroup/WordPressTargetGroup/8eb6b483cbbfbefc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "WordPressTargetGroup",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0671cd56ea1380d5e"
          },
          "dependencies": [
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_worpress_app",
      "mode": "managed",
      "type": "aws_lb",
      "name": "WordPressALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:386832079757:loadbalancer/app/wof-load-balancer/623e1dd7b0db2ca4",
            "arn_suffix": "app/wof-load-balancer/623e1dd7b0db2ca4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "wof-load-balancer-1107395223.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:386832079757:loadbalancer/app/wof-load-balancer/623e1dd7b0db2ca4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wof-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0356762a434c68ab1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-070f5908db770b14f"
              },
              {
                "subnet_id": "subnet-0fcff5cff85f6bac1"
              }
            ],
            "subnets": [
              "subnet-070f5908db770b14f",
              "subnet-0fcff5cff85f6bac1"
            ],
            "vpc_id": "vpc-0671cd56ea1380d5e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.aws_network.aws_subnet.PublicSubnet0",
            "module.aws_network.aws_subnet.PublicSubnet1",
            "module.aws_network.aws_vpc.wordpress_vpc",
            "module.aws_worpress_app.aws_security_group.ALBSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.aws_worpress_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALBSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386832079757:security-group/sg-0356762a434c68ab1",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0356762a434c68ab1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow database access to the whole world",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Wordpress-Demo-ALB-SG",
            "name_prefix": "",
            "owner_id": "386832079757",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0671cd56ea1380d5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_network.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_worpress_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WordPressServiceSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386832079757:security-group/sg-0a30b9d4b0068b651",
            "description": "Svc-WordPress-on-Fargate",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a30b9d4b0068b651",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0356762a434c68ab1"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Svc-WordPress-on-Fargate",
            "name_prefix": "",
            "owner_id": "386832079757",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0671cd56ea1380d5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_network.aws_vpc.wordpress_vpc",
            "module.aws_worpress_app.aws_security_group.ALBSecurityGroup"
          ]
        }
      ]
    }
  ]
}